# codex-last-prompt-footer

./: .gitattributes  .gitignore  Cargo.toml  GITHUB_METADATA.md  LICENSE  README.md  dist-workspace.toml  package.json
.github/workflows/: release-assets.yml  release.yml
patches/: codex-v0.114.0-last-prompt-footer.patch
scripts/: build.ps1  build.sh  control.ps1  control.sh  install.ps1  install.sh  restore.ps1  restore.sh
src/: main.rs
