[package]
name = "codex-last-prompt-footer"
version = "0.114.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bic98/codex-last-prompt-footer"
description = "Native installer for the Codex Last Prompt Footer patch."

[dependencies]
tempfile = "3.23.0"

[profile.dist]
inherits = "release"
lto = "thin"
